fix spacing in nav ul

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -55,7 +55,6 @@
 
 #navigator ul {
   margin: 0;
-  width: 100%;
   height: auto;
   background-color: #B4B4B4;
   border: 1px solid #999999;
